// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu props :active 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu props :collapsed 1`] = `
<div class="t-default-menu t-menu--light t-is-collapsed" style="height: 100%; width: 64px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu props :collapsedWidth 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;" collapsedwidth="100px">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu props :height 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;" height="750px">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu props :theme 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu props :theme 2`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu props :width 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 256px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu slot <default> 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar">
      <div></div>
    </ul>
  </div>
</div>
`;

exports[`Menu slot <logo> 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;">
  <div class="t-default-menu__inner">
    <div class="t-menu__logo">
      <div></div>
    </div>
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
  </div>
</div>
`;

exports[`Menu slot <options> 1`] = `
<div class="t-default-menu t-menu--light" style="height: 100%; width: 232px;">
  <div class="t-default-menu__inner">
    <ul class="t-menu t-menu--scroll narrow-scrollbar"></ul>
    <div class="t-menu__operations">
      <div></div>
    </div>
  </div>
</div>
`;
